--- a/Untitled64.ipynb
+++ b/Untitled64.ipynb
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name:Meenatai \n",
+      "Enter your name: XYZ \n",
       "Enter a year:1965\n",
       "Enter a month:04\n",
       "Enter a date:17\n",
